fixed an issue with sections overlapping each other because the height was insufficient

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -297,6 +297,11 @@ body.bg-blur > main > * {
   box-shadow: 0px 0px 52px -8px rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 540px) {
+  .about-wrapper {
+    max-width: 80%;
+  }
+}
 .about-content {
   display: flex;
   position: relative;
